# ChaiEngine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  build.sh  prebuild.sh
Audio/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  README.md
Audio/examples/: CMakeLists.txt
Audio/examples/AudioTestDriver/: CMakeLists.txt  main.cpp
ChaiApps/: CMakeLists.txt  Chai.cpp  Chai.h  plugins.json
ChaiGraphics/: CMakeLists.txt
ChaiGraphics/ChaiEngine/: CMakeLists.txt
ChaiGraphics/ChaiEngine/include/Assets/: AssetManager.h  MaterialAsset.h  MeshAsset.h
ChaiGraphics/ChaiEngine/include/ChaiEngine/: AssetManager.h  ChaiWindow.h  CoordinateSpace.h  Engine.h  Euclidean.h  IMaterial.h  IMesh.h  Light.h  Material.h  MaterialSystem.h  MeshAsset.h  PipelineState.h  RenderCommandCollector.h  RenderCommandList.h  RenderFrame.h  RenderTarget.h  RenderView.h  Renderer.h  Shader.h  ShaderCache.h  ShaderFactory.h  ShaderManager.h  ShaderProgram.h  Spherical.h  UniformBuffer.h  Vertex.h  VertexBuffer.h  ViewData.h  Viewer.h  Viewport.h  Window.h
ChaiGraphics/ChaiEngine/include/Coordinate/: CoordinateSpace.h  Euclidean.h  Spherical.h
ChaiGraphics/ChaiEngine/include/Graphics/: GraphicsTypes.h  MaterialParameter.h  RenderKey.h  RenderPass.h  ShaderAsset.h  TextureAsset.h  VertexAttribute.h
ChaiGraphics/ChaiEngine/include/RenderObjects/: Cube.h  RenderObject.h  Triangle.h
ChaiGraphics/ChaiEngine/include/Renderables/: Cube.h  Renderable.h  Triangle.h
ChaiGraphics/ChaiEngine/source/Assets/: AssetManager.cpp  MaterialAsset.cpp  MeshAsset.cpp
ChaiGraphics/ChaiEngine/source/ChaiEngine/: AssetManager.cpp  ChaiWindow.cpp  Engine.cpp  (+14 more)
ChaiGraphics/EngineInterface/: CMakeLists.txt
ChaiGraphics/include/: IGraphicsApi.h
ChaiGraphics/include/ChaiGraphics/: ChaiWindow.h  Common.h  IGraphicsApi.h  IRenderer.h  Viewer.h  Viewport.h  Window.h
ChaiGraphics/include/RenderObjects/: RenderObject.h  Triangle.h
ChaiGraphics/source/: IGraphicsApi.cpp
ChaiGraphics/source/ChaiGraphics/: ChaiWindow.cpp  IRenderer.cpp  Viewer.cpp  Viewport.cpp  Window.cpp
ChaiGraphics/source/RenderObjects/: Triangle.cpp
ChaiMath/: CMakeLists.txt
ChaiMath/include/: ChaiMath.h  ChaiMathOps.h  ChaiMatrix.h  ChaiQuat.h  ChaiVector.h  MatBase.h  Mat_2x2.h  Mat_3x3.h  Mat_4x4.h  MathIncludes.h  QuatBase.h  Vec2.h  Vec3.h  Vec4.h  VecBase.h  VecTraits.h
ChaiMath/source/: ChaiMathOps.cpp  ChaiMatrix.cpp  ChaiQuat.cpp  GLMWrapper.cpp  Vec2.cpp  Vec3.cpp  VecBase.cpp
ChaiMath/source/internal/: glm_internal.h
ChaiMath/tests/: CMakeLists.txt  mat_tests.cpp  ops_test.cpp  quat_tests.cpp  test_helpers.h  vec_test.cpp
ChaiPhysics/: CMakeLists.txt  Dynamic_BVH.md  README.md
ChaiPhysics/core/: dbvh.cpp  dbvh.h
ChaiPhysics/include/ChaiPhysics/: ChaiPhysics.h
ChaiPhysics/source/ChaiPhysics/: ChaiPhysics.cpp
ChaiPhysics/tests/: CMakeLists.txt  dbvh_test.cpp
Core/: CMakeLists.txt
Core/include/Asset/: AssetHandle.h  AssetLoader.h  AssetManager.h  AssetPool.h
Core/include/Core/: Containers.h  EventHandler.h  InputState.h  MemoryTypes.h  PluginLoader.h  PluginRegistry.h  Rect.h  TextureBackend.h  TypeHelpers.h  Updatable.h
Core/include/Graphics/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  IViewport.h  Viewport.cpp  Viewport.h
Core/include/Input/: EventHandler.h  InputState.h  InputSystem.h
Core/include/Meta/: ChaiMacros.h  MethodInvoker.h  TypeInfo.h  TypeRegistry.h
Core/include/Plugin/: PluginBase.h  PluginLoader.h  PluginManifest.h  PluginRegistry.h  ServiceLocator.h  ServiceRegistry.h
Core/include/Resource/: Resource.h  ResourceLoader.h  ResourceManager.h  ResourcePool.h
Core/include/Scene/: ICamera.h
Core/include/Types/: CMap.h  Texture2D.h
Core/source/Asset/: AssetManager.cpp
Core/source/Core/: Containers.cpp  InputState.cpp  PluginLoader.cpp  PluginRegistry.cpp  Updatable.cpp
Core/source/Graphics/: Viewport.cpp
Core/source/Input/: InputState.cpp  InputSystem.cpp
Core/source/Meta/: TypeRegistry.cpp
Core/source/Plugin/: PluginLoader.cpp  PluginRegistry.cpp  ServiceLocator.cpp
Core/source/Resource/: ResourceManager.cpp
Core/source/Scene/: ICamera.cpp
Core/source/Types/: Texture2D.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/: Engine.h
Engine/source/Engine/: Engine.cpp
GraphicsApis/OpenGL/: CMakeLists.txt
GraphicsApis/OpenGL/include/: OpenGLModule.cpp
GraphicsApis/Vulkan/: CMakeLists.txt
GraphicsApis/Vulkan/include/: VulkanApi.h
GraphicsBackends/OpenGL/: CMakeLists.txt
Plugins/GLFWWindow/: CMakeLists.txt  GLFWBackend.cpp  GLFWBackend.h  GLFWSystem.cpp  GLFWSystem.h
Plugins/GLSLLoader/: CMakeLists.txt
Plugins/Parsers/: CMakeLists.txt
Plugins/TextureLoader/: CMakeLists.txt
Scene/: CMakeLists.txt
Scene/include/Components/: CameraComponent.h  ComponentBase.h  ControllerComponent.h  LightComponent.h  MeshComponent.h  RenderableComponent.h  TransformComponent.h
Scene/include/Controllers/: CameraController.h  Controller.h
Scene/include/Scene/: Camera.h  CameraComponent.h  CameraController.h  ComponentBase.h  Controller.h  ControllerComponent.h  Entity.h  GameObject.h  Light.h  LightComponent.h  LightSystem.h  LogicalViewport.h  MeshComponent.h  RenderFrameBuilder.h  RenderableComponent.h  Scene.h  SceneManager.h  SceneNode.h  Skybox.h  TransformComponent.h
Scene/source/Components/: CameraComponent.cpp  ControllerComponent.cpp  LightComponent.cpp  MeshComponent.cpp  TransformComponent.cpp
Scene/source/Controllers/: CameraController.cpp
Scene/source/Scene/: Camera.cpp  CameraComponent.cpp  CameraController.cpp  ControllerComponent.cpp  GameObject.cpp  LightComponent.cpp  LightSystem.cpp  MeshComponent.cpp  RenderFrameBuilder.cpp  Scene.cpp  SceneManager.cpp  Skybox.cpp  TransformComponent.cpp
Window/: CMakeLists.txt
Window/include/Window/: GLFWImpl.h  InputState.h  Viewport.h  ViewportManager.h  Window.h  WindowManager.h  WindowSystem.h
Window/source/Window/: GLFWImpl.cpp  Viewport.cpp  ViewportManager.cpp  Window.cpp  WindowManager.cpp  WindowSystem.cpp
(+106 files in other folders)
